# SoroTask

./: .gitleaks.toml  .release-please-manifest.json  AI_ASSISTANT_DOCUMENTATION.md  AI_ASSISTANT_EXAMPLE.md  AI_ASSISTANT_INTEGRATION.md  AI_ASSISTANT_QUICK_REFERENCE.md  AI_ASSISTANT_SETUP.md  FEATURES_DOCUMENTATION.md  FRONTEND_EXPLORATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST_AI_ASSISTANT.md  IMPLEMENTATION_SUMMARY_AI_ASSISTANT.md  REAL_TIME_STREAMING.md  SECURITY_REVIEW_NEW_FEATURES.md  compile_errors.txt  package-lock.json  package.json  playwright.config.ts  pr_issue_465.md  pr_issue_466.md
contract/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
contract/.cargo/: audit.toml
contract/docs/: ACCESS_CONTROL_AUDIT.md  upgradable-contract-architecture.md
contract/src/: events.rs  lib.rs  proptest.rs  test.rs  test_access_control.rs  test_combinations.rs  test_events.rs  test_gas.rs
contract/src/tests/: security_tests.rs
contract/test_snapshots/proptest/: test_gas_balance_invariants.1.json  test_gas_balance_invariants.10.json  test_gas_balance_invariants.100.json  test_gas_balance_invariants.11.json  test_gas_balance_invariants.12.json  test_gas_balance_invariants.13.json  test_gas_balance_invariants.14.json  test_gas_balance_invariants.15.json  test_gas_balance_invariants.16.json  test_gas_balance_invariants.17.json  test_gas_balance_invariants.18.json  test_gas_balance_invariants.19.json  test_gas_balance_invariants.2.json  test_gas_balance_invariants.20.json  test_gas_balance_invariants.21.json  test_gas_balance_invariants.22.json  (+280 more)
docs/: background-sync.md
(+457 files in other folders)
