[package]
name = "soro_task_contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.3.1"

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
proptest = "1.5.0"

[features]
testutils = ["soroban-sdk/testutils"]

[package.metadata.tarpaulin]
timeout = 600
out = ["Xml"]
exclude-files = ["fuzz/*"]