[package]
name = "soro_task_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.0.1"

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
proptest = "1.5.0"

[features]
testutils = ["soroban-sdk/testutils"]

[package.metadata.tarpaulin]
timeout = 600
out = ["Xml"]
exclude-files = ["fuzz/*"]